# wavefunction_collapse

./: .gitignore  README.md  pyproject.toml
src/scripts/: render_tileset.py
src/wavefunction_collapse/: cli.py  generator.py  renderer.py  tiles.py
tiles/example/: constraints.yaml
tiles/road/: constraints.yaml
