[project]
name = "wavefunction_collapse"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "matplotlib",
    "Pillow",
    "PyQt5",
    "PyYAML",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "ruff",
    "jupyter",
    "ipython",
]