[project]
name = "wavefunction_collapse"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "Pillow",
    "PyYAML",
]

[project.scripts]
wfc = "wavefunction_collapse.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "ruff",
    "jupyter",
    "ipython",
]



[tool.ruff]
line-length = 120